Add WHY to README

--- a/README
+++ b/README
@@ -2,3 +2,12 @@ STUDY
 =====
 Selected solutions to exercises from courses and books. Resource links
 and run instructions could be found in individual folder or file.
+
+WHY
+===
+- To make a habit of writing production quality code
+- To be perchance of help to people who go through the same materials
+
+RESOURCE ID
+===========
+- algsp1: Algorithms, Part I (book & Coursera)
