algsp1: Update README

--- a/Algorithms, Part I/README
+++ b/Algorithms, Part I/README
@@ -1,7 +1,7 @@
 ALGORITHMS, PART I by Robert Sedgewick and Kevin Wayne
 
 - Book: https://www.amazon.com/Algorithms-Part-I-Robert-Sedgewick-ebook/dp/B00I50LKYW
-- Course: https://www.coursera.org/learn/algorithms-part1
+- Coursera: https://www.coursera.org/learn/algorithms-part1
 - Web: https://algs4.cs.princeton.edu/home/
 - algs4 repo: https://github.com/kevin-wayne/algs4
 
