--- a/README
+++ b/README
@@ -11,3 +11,5 @@ WHY
 RESOURCE ID
 ===========
 - algsp1: Algorithms, Part I (book & Coursera)
+  + book: https://www.amazon.com/Algorithms-Part-I-Robert-Sedgewick-ebook/dp/B00I50LKYW
+  + Coursera: https://www.coursera.org/learn/algorithms-part1
