csapp: Add Exercise 6.45

--- a/README
+++ b/README
@@ -19,3 +19,5 @@ web, code repos), see individual resource page.
 - algsp1: Algorithms, Part I (book & Coursera)
   + book: https://www.amazon.com/Algorithms-Part-I-Robert-Sedgewick-ebook/dp/B00I50LKYW
   + Coursera: https://www.coursera.org/learn/algorithms-part1
+- csapp: Computer Systems, A Programmer's Perspective (book)
+  + book: http://csapp.cs.cmu.edu/3e/home.html
