algsp1:adt:stack Add toString method

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 STUDY
 =====
-Selected solutions to exercises from courses and books. Resource links
+Solutions to selected exercises from courses and books. Resource links
 and run instructions could be found in individual folder or file.
 
 WHY
