--- a/README
+++ b/README
@@ -3,11 +3,11 @@ Solutions to selected exercises from courses and books. Resource links
 and run instructions could be found in individual folder or file.
 
 RESOURCE ID
-Here are the resource IDs used in commit messages. Each resource
-includes in parentheses which resource types' solutions are available
-as a resource could consist of multiple material types such as books,
-labs, or Coursera courses. For further supporting material links (e.g.,
-web, code repos), see individual resource page.
+These are the resource IDs at the beginning of commit messages. Each
+resource could have multiple related materials such as books and
+Coursera courses. The canonical names are from books, university
+courses, or MOOC, in that order. For further supporting material links
+(e.g., web, code repos), see individual resource page.
 
 - algsp1: Algorithms, Part I
   + book: https://www.amazon.com/Algorithms-Part-I-Robert-Sedgewick-ebook/dp/B00I50LKYW
