--- a/README
+++ b/README
@@ -20,3 +20,6 @@ courses, or MOOC, in that order. For further supporting material links
   + Coursera: https://www.coursera.org/learn/scala2-functional-program-design
 - lcpis: Learning Concurrent Programming in Scala
   + book: https://www.packtpub.com/product/learning-concurrent-programming-in-scala/9781783281411
+- xv6: xv6: a simple, Unix-like teaching operating system
+  + book: https://pdos.csail.mit.edu/6.828/2020/xv6/book-riscv-rev1.pdf
+  + course: https://pdos.csail.mit.edu/6.828/2020/index.html
