--- a/README
+++ b/README
@@ -23,3 +23,6 @@ courses, or MOOC, in that order. For further supporting material links
 - xv6: xv6: a simple, Unix-like teaching operating system
   + book: https://pdos.csail.mit.edu/6.828/2020/xv6/book-riscv-rev1.pdf
   + course: https://pdos.csail.mit.edu/6.828/2020/index.html
+- dbsc: Database System Concepts
+  + book: https://www.db-book.com/
+  + course: https://15445.courses.cs.cmu.edu/fall2021/
