--- a/README
+++ b/README
@@ -21,10 +21,11 @@ courses, or MOOC, in that order. For further supporting material links
 - lcpis: Learning Concurrent Programming in Scala
   + book: https://www.packtpub.com/product/learning-concurrent-programming-in-scala/9781783281411
 - xv6: xv6: a simple, Unix-like teaching operating system
-  + book: https://pdos.csail.mit.edu/6.828/2020/xv6/book-riscv-rev1.pdf
   + course: https://pdos.csail.mit.edu/6.828/2020/index.html
 - dbsc: Database System Concepts
   + book: https://www.db-book.com/
   + course: https://15445.courses.cs.cmu.edu/fall2021/
 - pcdp: Parallel, Concurrent, and Distributed Programming in Java
   + course: https://www.coursera.org/specializations/pcdp
+- dis: Distributed Systems
+  + course: http://nil.csail.mit.edu/6.824/2020/
