ascj: Update README

--- a/README
+++ b/README
@@ -29,3 +29,6 @@ courses, or MOOC, in that order. For further supporting material links
   + course: https://www.coursera.org/specializations/pcdp
 - dis: Distributed Systems
   + course: http://nil.csail.mit.edu/6.824/2020/
+- ascj: Advanced Software Construction in Java
+  + course: https://ocw.mit.edu/courses/6-005-software-construction-spring-2016/
+  + edX: https://www.edx.org/course/advanced-software-construction-in-java
