--- a/README
+++ b/README
@@ -31,3 +31,5 @@ courses, or MOOC, in that order. For further supporting material links
   + course: http://nil.csail.mit.edu/6.824/2020/
 - ascj: Advanced Software Construction in Java
   + edX: https://www.edx.org/course/advanced-software-construction-in-java
+- ostep: Operating Systems: Three Easy Pieces
+  + book: https://pages.cs.wisc.edu/~remzi/OSTEP
