fpis/ch4: Update README.md

--- a/README
+++ b/README
@@ -33,3 +33,5 @@ courses, or MOOC, in that order. For further supporting material links
   + edX: https://www.edx.org/course/advanced-software-construction-in-java
 - ostep: Operating Systems: Three Easy Pieces
   + book: https://pages.cs.wisc.edu/~remzi/OSTEP
+- fpis: Functional Programming in Scala
+  + book: https://a.co/d/bYkovN1
