--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Coursera courses. The canonical names are from books, university
 courses, or MOOC, in that order. For further supporting material links
 (e.g., web, code repos), see individual resource page.
 
-- algsp1: Algorithms
+- algs: Algorithms
   + book: https://www.amazon.com/Algorithms-4th-Robert-Sedgewick/dp/032157351X
   + Coursera: https://www.coursera.org/learn/algorithms-part1
 - csapp: Computer Systems, A Programmer's Perspective
