Add Computer Organization and Design

--- a/README
+++ b/README
@@ -37,3 +37,6 @@ courses, or MOOC, in that order. For further supporting material links
   + book: https://a.co/d/bYkovN1
 - lc: LeetCode
   + web: https://leetcode.com/
+- cod: Computer Organization and Design
+  + book: https://a.co/d/d1Jj4FV
+  + course: https://inst.eecs.berkeley.edu/~cs61c/sp22/
