--- a/README
+++ b/README
@@ -9,6 +9,8 @@ Coursera courses. The canonical names are from books, university
 courses, or MOOC, in that order. For further supporting material links
 (e.g., web, code repos), see individual resource page.
 
+- sicp: Structure and Interpretation of Computer Programs
+  + book: https://a.co/d/dGoEB5A
 - algs: Algorithms
   + book: https://www.amazon.com/Algorithms-4th-Robert-Sedgewick/dp/032157351X
   + Coursera: https://www.coursera.org/learn/algorithms-part1
