idaa/ch1: Complete exercise 1.1.4

--- a/README
+++ b/README
@@ -42,3 +42,5 @@ courses, or MOOC, in that order. For further supporting material links
 - cod: Computer Organization and Design
   + book: https://a.co/d/d1Jj4FV
   + course: https://inst.eecs.berkeley.edu/~cs61c/sp22/
+- idaa: Introduction to the Design and Analysis of Algorithms
+  + book: https://a.co/d/g49sPNp
