dragon/ch2: Update README

--- a/README
+++ b/README
@@ -44,3 +44,5 @@ are truly rewarding to work through.
   + book: https://a.co/d/g49sPNp
 - nanodb: Database System Implementation
   + course: http://courses.cms.caltech.edu/cs122/
+- *dragon: Compilers: Principles, Techniques, and Tools
+  + book: https://a.co/d/6HBpbje
