alspe/c1: Update README

--- a/README
+++ b/README
@@ -46,3 +46,5 @@ are truly rewarding to work through.
   + course: http://courses.cms.caltech.edu/cs122/
 - *dragon: Compilers: Principles, Techniques, and Tools
   + book: https://a.co/d/6HBpbje
+- alspe: Coursera Algorithms Specialization
+  + Coursera: https://www.coursera.org/specializations/algorithms
