alspe/c1: Complete book Problem 3.3

--- a/README
+++ b/README
@@ -48,3 +48,4 @@ are truly rewarding to work through.
   + book: https://a.co/d/6HBpbje
 - alspe: Coursera Algorithms Specialization
   + Coursera: https://www.coursera.org/specializations/algorithms
+  + book: https://www.amazon.com/dp/0999282980
