ooad/c1: Update README

--- a/README
+++ b/README
@@ -49,3 +49,5 @@ are truly rewarding to work through.
 - alspe: Coursera Algorithms Specialization
   + Coursera: https://www.coursera.org/specializations/algorithms
   + book: https://www.amazon.com/dp/0999282980
+- ooad: Coursera Object-Oriented Analysis & Design Specialization
+  + Coursera: https://www.coursera.org/specializations/object-oriented-analysis-design
