--- a/README
+++ b/README
@@ -8,44 +8,48 @@ resource could have multiple related materials such as books and
 Coursera courses. For further supporting material links (e.g., web, code
 repos), see individual resource page. `*` denotes golden resources that
 are truly rewarding to work through.
+
 - libcc: Implementation of classic data structures and algorithms for
   educational purpose as well as OS development
-- *sicp: Structure and Interpretation of Computer Programs
-  + book: https://a.co/d/dGoEB5A
-- *algs: Algorithms
-  + book: https://www.amazon.com/Algorithms-4th-Robert-Sedgewick/dp/032157351X
-  + Coursera: https://www.coursera.org/learn/algorithms-part1
-- *csapp: Computer Systems, A Programmer's Perspective
-  + book: http://csapp.cs.cmu.edu/3e/home.html
+- \*sicp: Structure and Interpretation of Computer Programs
+  - book: https://a.co/d/dGoEB5A
+- \*algs: Algorithms
+  - book: https://www.amazon.com/Algorithms-4th-Robert-Sedgewick/dp/032157351X
+  - Coursera: https://www.coursera.org/learn/algorithms-part1
+- \*csapp: Computer Systems, A Programmer's Perspective
+  - book: http://csapp.cs.cmu.edu/3e/home.html
 - natda: Computer Networking, A Top-Down Approach
-  + book: http://gaia.cs.umass.edu/kurose_ross/index.php
+  - book: http://gaia.cs.umass.edu/kurose_ross/index.php
 - fpdis: Functional Program Design in Scala
-  + Coursera: https://www.coursera.org/learn/scala2-functional-program-design
+  - Coursera: https://www.coursera.org/learn/scala2-functional-program-design
 - lcpis: Learning Concurrent Programming in Scala
-  + book: https://www.packtpub.com/product/learning-concurrent-programming-in-scala/9781783281411
-- *xv6: xv6: a simple, Unix-like teaching operating system
-  + course: https://pdos.csail.mit.edu/6.828/2020/index.html
+  - book: https://www.packtpub.com/product/learning-concurrent-programming-in-scala/9781783281411
+- \*xv6: xv6: a simple, Unix-like teaching operating system
+  - course: https://pdos.csail.mit.edu/6.828/2020/index.html
 - dbsc: Database System Concepts
-  + book: https://www.db-book.com/
-  + course: https://15445.courses.cs.cmu.edu/fall2021/
+  - book: https://www.db-book.com/
+  - course: https://15445.courses.cs.cmu.edu/fall2021/
 - pcdp: Parallel, Concurrent, and Distributed Programming in Java
-  + course: https://www.coursera.org/specializations/pcdp
-- *dis: Distributed Systems
-  + course: http://nil.csail.mit.edu/6.824/2020/
+  - course: https://www.coursera.org/specializations/pcdp
+- \*dis: Distributed Systems
+  - course: http://nil.csail.mit.edu/6.824/2020/
 - ascj: Advanced Software Construction in Java
-  + edX: https://www.edx.org/course/advanced-software-construction-in-java
+  - edX: https://www.edx.org/course/advanced-software-construction-in-java
 - ostep: Operating Systems: Three Easy Pieces
-  + book: https://pages.cs.wisc.edu/~remzi/OSTEP
+  - book: https://pages.cs.wisc.edu/~remzi/OSTEP
 - fpis: Functional Programming in Scala
-  + book: https://a.co/d/bYkovN1
+  - book: https://a.co/d/bYkovN1
 - lc: LeetCode
-  + web: https://leetcode.com/
+  - web: https://leetcode.com/
 - idaa: Introduction to the Design and Analysis of Algorithms
-  + book: https://a.co/d/g49sPNp
+  - book: https://a.co/d/g49sPNp
 - nanodb: Database System Implementation
-  + course: http://courses.cms.caltech.edu/cs122/
-- *dragon: Compilers: Principles, Techniques, and Tools
-  + book: https://a.co/d/6HBpbje
+  - course: http://courses.cms.caltech.edu/cs122/
+- \*dragon: Compilers: Principles, Techniques, and Tools
+  - book: https://a.co/d/6HBpbje
 - alspe: Coursera Algorithms Specialization
-  + Coursera: https://www.coursera.org/specializations/algorithms
-  + book: https://www.amazon.com/dp/0999282980
+  - Coursera: https://www.coursera.org/specializations/algorithms
+  - book: https://www.amazon.com/dp/0999282980
+- adm: The Algorithm Design Manual
+  - book: https://www.amazon.com/Algorithm-Design-Manual-Computer-Science-dp-3030542556/dp/3030542556
+  - course: https://www3.cs.stonybrook.edu/~skiena/373/
