--- a/README
+++ b/README
@@ -56,3 +56,5 @@ are truly rewarding to work through.
 - adm: The Algorithm Design Manual
   + book: https://www.amazon.com/Algorithm-Design-Manual-Computer-Science-dp-3030542556/dp/3030542556
   + course: https://www3.cs.stonybrook.edu/~skiena/373/
+- tlam: How to Think Like a Mathematician
+  + book: https://www.amazon.com/How-Think-Like-Mathematician-Undergraduate/dp/052171978X
