--- a/README
+++ b/README
@@ -58,3 +58,5 @@ are truly rewarding to work through.
   + course: https://www3.cs.stonybrook.edu/~skiena/373/
 - tlam: How to Think Like a Mathematician
   + book: https://www.amazon.com/How-Think-Like-Mathematician-Undergraduate/dp/052171978X
+- calc: OpenStax Calculus
+  + book: https://openstax.org/details/books/calculus-volume-1
