cmake/ch2: Update README

--- a/README
+++ b/README
@@ -60,3 +60,5 @@ are truly rewarding to work through.
   + book: https://www.amazon.com/How-Think-Like-Mathematician-Undergraduate/dp/052171978X
 - ooad: Coursera Object-Oriented Analysis & Design Specialization
   + Coursera: https://www.coursera.org/specializations/object-oriented-analysis-design
+- cmake: Minimal CMake
+  + book: https://a.co/d/7u1stj5
